# knncolle_kmknn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  Kmknn_8hpp_source.html  aliases_8hpp.html  aliases_8hpp_source.html  annotated.html  classes.html  classknncolle__kmknn_1_1KmknnBuilder-members.html  classknncolle__kmknn_1_1KmknnBuilder.html  classknncolle__kmknn_1_1KmknnPrebuilt-members.html  classknncolle__kmknn_1_1KmknnPrebuilt.html  classknncolle__kmknn_1_1KmknnSearcher-members.html  classknncolle__kmknn_1_1KmknnSearcher.html  dir_3c8f4088e1492d98c65ec5406a808d2e.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  knncolle__kmknn_8hpp.html  knncolle__kmknn_8hpp_source.html  knncolle_kmknn.tag  menudata.js  namespaceknncolle__kmknn.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  register_8hpp.html  register_8hpp_source.html  structknncolle__kmknn_1_1KmknnOptions-members.html  structknncolle__kmknn_1_1KmknnOptions.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  (+31 more)
include/knncolle_kmknn/: Kmknn.hpp  aliases.hpp  knncolle_kmknn.hpp  register.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: Kmknn.cpp  TestCore.h  aliases.cpp  load_prebuilt.cpp
